<resources>
    <string name="app_name">ProductInternetShop</string>

    <string name="home_dishes_shop">Candles Shop</string>
    <string name="item_brand">Brand</string>
    <string name="item_name">Name</string>
    <string name="item_description">Description</string>
    <string name="item_price">Price</string>
    <string name="candles">Candles</string>
    <string name="diffusers">Diffusers</string>
    <string name="dev_name">Chernikova Darya</string>
    <string name="dev_lab_num">Lab №2</string>
    <string name="dev_group">951005</string>
    <string name="about">About</string>
    <string name="oops">Упс!</string>
    <string name="sign_in">Sign in with Google</string>
    <string name="no_auth">Вы еще не зарегистрировались!</string>

</resources>