<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".HomeFragment"
    android:background="@drawable/background"
    android:backgroundTint="#6DFFFFFF"
    android:backgroundTintMode="src_over">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_rect">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/button_about_dev"
            android:background="@drawable/button_about_dev"
            android:layout_marginLeft="8dp"
            android:text="About"
            android:textSize="10sp"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/gudea"
            android:text="@string/home_dishes_shop"
            android:textColor="@color/home_text_color"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="-1dp"
        android:background="@drawable/rect_shadow"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_button"
        android:textOff="@string/candles"
        android:textOn="@string/diffusers"
        android:layout_gravity="center"
        android:thumb="@drawable/switch_thumb"
        app:track="@drawable/switch_track"
        app:showText="true">
    </androidx.appcompat.widget.SwitchCompat>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"/>



</LinearLayout>