<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:backgroundTint="#6DFFFFFF"
        android:backgroundTintMode="src_over">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/item_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/item_color"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:layout_marginStart="120dp"
            android:text="@string/item_brand"
            android:fontFamily="@font/gudea"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="50dp"
            android:text="@string/item_name"
            android:fontFamily="@font/gudea"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:text="@string/item_price"
            android:fontFamily="@font/gudea"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>