<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ItemDetailActivity"
    android:background="@drawable/item_details_background"
    android:backgroundTint="#83FFFFFF"
    android:backgroundTintMode="src_over">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/home_text_color">

        <ImageButton
            android:id="@+id/detail_back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:fontFamily="@font/gudea"
            android:textStyle="bold"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/rect_shadow"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="3dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/item_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/item_color"/>

    </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_price_card"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="20dp"
                android:layout_alignParentEnd="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/gudea"
                    android:text="@string/item_price"
                    android:textColor="@color/home_text_color"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_price_sign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/gudea"
                    android:text="p."
                    android:textColor="@color/home_text_color"
                    android:textSize="22sp"
                    android:textStyle="bold"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/item_brand_card"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_below="@+id/item_price_card"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/item_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/gudea"
                    android:text="@string/item_brand"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/item_name_card"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_brand_card"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/gudea"
                    android:text="@string/item_name"
                    android:textSize="15sp" />

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_description"
        android:layout_margin="20dp"
        android:fontFamily="@font/gudea"
        android:textSize="15sp"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>